k8s-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: extractly
  labels:
    name: extractly
    environment: production
