k8s-monitoring.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: extractly-prometheus
  namespace: extractly
spec:
  replicas: 1
  selector:
    matchLabels:
      app: extractly-prometheus
  template:
    metadata:
      labels:
        app: extractly-prometheus
    spec:
      serviceAccountName: extractly-monitor
      containers:
      - name: prometheus
        image: prom/prometheus:latest
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: prometheus-config
          mountPath: /etc/prometheus/
        args:
        - '--config.file=/etc/prometheus/prometheus.yml'
        - '--storage.tsdb.path=/prometheus/'
        - '--web.console.libraries=/etc/prometheus/console_libraries'
        - '--web.console.templates=/etc/prometheus/consoles'
        - '--web.enable-lifecycle'
      volumes:
      - name: prometheus-config
        configMap:
          name: prometheus-config
---
apiVersion: v1
kind: Service
metadata:
  name: extractly-prometheus
  namespace: extractly
spec:
  selector:
    app: extractly-prometheus
  ports:
  - protocol: TCP
    port: 9090
    targetPort: 9090
